[project]
name = "multimount"
version = "0.1.0"
description = "MultiMount - 多协议文件挂载平台"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "alembic>=1.14,<2",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7,<2",
    "cryptography>=44,<45",
    "paramiko>=3.5,<4",
    "webdavclient3>=4,<5",
    "oss2>=2.19,<3",
    "boto3>=1.35,<2",
    "wsgidav>=4.3,<5",
    "cheroot>=10,<11",
    "aiofiles>=24,<25",
    "python-dotenv>=1.0,<2",
    "email-validator>=2.2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
]
